# pyicatu

./: .gitignore  Dockerfile  README.md  docker-compose.override.yml  exemplo.env  pyproject.toml  requirements.txt
.astro/: config.yaml
.github/workflows/: ci.yml
api_icatu/: Dockerfile  requirements.txt
api_icatu/app/: README.md  main.py
api_icatu/app/api/: metadata.py
api_icatu/app/api/v1/endpoints/: profitability.py  ticker.py
api_icatu/app/core/: config.py
api_icatu/app/crud/: financial.py
api_icatu/app/db/: session.py
api_icatu/app/models/financial/: __init__.py  dim_ticker.py  dim_ticker_type.py
api_icatu/app/pyicatu/: __init__.py  financial_metrics.py
api_icatu/app/pyicatu/models/financial/: queries.py
api_icatu/app/pyicatu/settings/: __init__.py  config.py
api_icatu/app/pyicatu/utils/: __init__.py  database.py
api_icatu/app/schemas/: __init__.py  ticker.py
app/: main.py
app/api/: metadata.py
app/api/v1/endpoints/: profitability.py  ticker.py
app/core/: config.py
app/crud/: financial.py
app/db/: session.py
app/models/financial/: __init__.py  dim_ticker.py  dim_ticker_type.py
app/schemas/: __init__.py  ticker.py
dags/: daily_financial_data.py  exampledag.py  financial_data_initialization.py
dags/libs/: database.py  financial_data.py
dashboard/: Dockerfile  README.md  app.py  config.py  requirements.txt
dashboard/api/: client.py
dashboard/components/: crud_tickers.py  profitability_calculator.py  table_utils.py
dashboard/utils/: formatting.py
datawarehouse/: .user.yml  README.md  dbt_project.yml  profiles.yml
datawarehouse/docs/: homepage.md
datawarehouse/macros/: build_partitioned_table_if_missing.sql  create_partitions.sql  schema.yml
datawarehouse/models/marts/financial/: financial.yml
datawarehouse/models/marts/financial/dimensions/: dim_date_tb.sql  dim_ticker_tb.sql  dim_ticker_type_tb.sql
datawarehouse/models/marts/financial/facts/: fct_serie_tb.sql
datawarehouse/models/staging/: _sources.yml
datawarehouse/models/staging/financial/: stg_financial.yml  vw_stg_raw_market_data.sql
pyicatu/: __init__.py  financial_metrics.py
pyicatu/models/: __init__.py
pyicatu/models/financial/: __init__.py  queries.py
pyicatu/settings/: config.py
